--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ no-entrypoint = []
 [dependencies]
 solana-program = "1.18.26"
 
+[dev-dependencies]
+solana-program-test = "1.18.26"
+solana-sdk = "1.18.26"
+tokio = "1.45.1"
+
